# TryingVulkan

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ComprehendingTheDocumentation-SomeKindOfADiary  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  README.md  VULKAN.sln  VULKAN.vcxproj  VULKAN.vcxproj.filters  VULKAN_Tests.sln  VULKAN_Tests.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.sh  clean.sh  cmake_install.cmake  out  vulkinfo
Dependencies/shaders/: shader.vert
Dependencies/src/: main.cpp
VULKAN_Tests/: VULKAN_Tests
VULKAN_Tests.dir/Debug/: VULKAN_Tests.exe.recipe
VULKAN_Tests.dir/Debug/VULKAN_Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  VULKAN_Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VULKAN_Tests/Debug/: VULKAN_Tests.ilk
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
